fix: fixed alignment of names and team roles (#26)

--- a/src/app/_components/TeamMember/index.module.scss
+++ b/src/app/_components/TeamMember/index.module.scss
@@ -149,6 +149,12 @@
   margin-top: 0.6rem;
 }
 
+.nameRoleContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 @media (max-width: 1024px) {
   .teamMember {
     width: 280px;
